content/static: fix z-index of mobile nav outline dropdown
The mobile nav dropdown was indexed too high
and covered the hamburger menu when it was open.
Adjusts the z-index so that the dropdown will
appear behind the hamburger menu.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/264626
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/content/static/css/sidenav.css
+++ b/content/static/css/sidenav.css
@@ -28,7 +28,7 @@
   position: sticky;
   top: var(--header-height);
   transition: box-shadow 0.2s linear;
-  z-index: 1000;
+  z-index: 4;
 }
 .DocNavMobile--withShadow {
   box-shadow: 0 0.1875rem 0.1875rem rgba(0, 0, 0, 0.2);
